# dhsc-data-tools

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  README.md.backup  mypy.ini  pyproject.toml
.github/workflows/: qa.yaml
dhsc_data_tools/: __init__.py  _auth_utils.py  _backend_utils.py  _constants.py  dac_odbc.py  keyvault.py  remote_compute.py  tools.py
docs/dhsc_data_tools/: auth_utils.md  dac_odbc.md  dataconnect.html  dataconnect.md  index.html  index.md  keyvault.html  keyvault.md  remote_compute.html  remote_compute.md
docs/source/: conf.py  developer_docs.rst  dhsc_data_tools.rst  getting_started.rst  index.rst  modules.rst  readme.rst
docs/source/_static/: developer_docs.md  installation_and_usage.md
scripts/: install_env.sh  make_docs.sh
src/DHSCdataPy/: dbricksconnect.py  keyvaults.py
src/dhsc_data_tools/: __init__.py  _auth_utils.py  _constants.py  _ddt_utils.py  _utils.py  auth_utils.py  dac_odbc.py  dac_tools.py  dataconnect.py  keyvault.py  remote_compute.py  tools.py
src/dhsc_data_tools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: pylint_output.txt  pylint_output_19032024.txt  pylint_output_20240402T1820  pylint_outputs.txt  test_pytest.py  tests_unittest.py  unittests.py  unittests_output.txt
type_stubs/: pypac.pyi
typings/: pyodbc.pyi
