[project]
name = "dhsc_data_tools"
version = "1.1.0"
authors = [
  { name="Data Science Hub", email="datascience@dhsc.gov.uk" },
]
description = "An internal Python package to facilitate working with the DAC"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dependencies = [
  "pyodbc",
  "pypac",
  "pyyaml",
  "platformdirs",
  "azure-identity",
  "azure-keyvault-secrets",
  "databricks-connect",
]

[project.optional-dependencies]
dev = [
  "isort",
  "pytest",
  "build",
  "ruff",
  "pre-commit",
  "bandit",
  "detect-secrets",
]
docs = [
  "sphinx",
  "sphinx-markdown-builder",
  "sphinx_rtd_theme",
  "sphinx-mdinclude",
]

[project.urls]
Homepage = "https://github.com/DataS-DHSC/dhsc-data-tools"
Issues = "https://github.com/DataS-DHSC/dhsc-data-tools/issues"

[build-system]
requires = ["setuptools >= 61.0", "cython >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B608"]