[project]
name = "dhsc_data_tools"
version = "1.1.3"
authors = [
  { name="Data Science Hub", email="datascience@dhsc.gov.uk" },
]
description = "An internal Python package to facilitate working with the DAC"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8,<3.13"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Private :: Do Not Upload",
]
dependencies = [
  "pyodbc",
  "pypac",
  "pyyaml",
  "platformdirs",
  "azure-identity",
  "azure-keyvault-secrets",
  "databricks-connect",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "build",
  "ruff",
  "pre-commit",
  "detect-secrets",
  "mypy",
  "types-PyYAML",
  "pandas-stubs",
  "types-requests",
]
docs = [
  "sphinx",
  "sphinx-markdown-builder",
  "sphinx_rtd_theme",
  "sphinx-mdinclude",
]

[project.urls]
Homepage = "https://github.com/DataS-DHSC/dhsc-data-tools"
Issues = "https://github.com/DataS-DHSC/dhsc-data-tools/issues"

[build-system]
requires = ["setuptools >= 61.0", "cython >= 0.29.0"]
build-backend = "setuptools.build_meta"

[tool.bandit]
skips = ["B608"]

[tool.ruff]
target-version = "py312"
line-length = 79

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "RET", # flake8-return
    "ARG", # unused arguments
    "PTH", # use pathlib
    "RUF", # Ruff-specific rules
    "PL",  # pylint rules
    "S",   # security
    "T",   # Type hints
    "D",   # Docstring style
    "COM", # Complexity checks
    "PYI", # stub file checks
]

ignore = ["PLW0603", "S608"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.per-file-ignores]
"tests/*.py" = [
    "S101",  # allow asserts
]
